<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Call Recorder</string>
    <!-- Bottom navigation labels -->
    <string name="tab_recordings">Recordings</string>
    <string name="tab_calls">Calls</string>
    <string name="tab_dialer">Dialer</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_crm_logs">CRM</string>
    <string name="recording_in_progress">Recording call…</string>
</resources>
