<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/recordingsFragment"
        android:icon="@drawable/ic_mic"
        android:title="@string/tab_recordings" />

    <item
        android:id="@+id/callsFragment"
        android:icon="@drawable/ic_call"
        android:title="@string/tab_calls" />

    <!-- Centre item — most prominent -->
    <item
        android:id="@+id/dialerFragment"
        android:icon="@drawable/ic_dialpad"
        android:title="@string/tab_dialer" />

    <item
        android:id="@+id/contactsFragment"
        android:icon="@drawable/ic_contacts"
        android:title="@string/tab_contacts" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/tab_settings" />

</menu>
